[package]
name = "native_app"
version = "0.1.1"
authors = ["Aaron R Miller <aaron.miller@waweb.io>"]
license = "MIT"
keywords = ["android", "ndk", "camera"]
readme = "../README.md"
links = "native_app_glue"
build = "build.rs"
include = [
    "src/*",
    "Cargo.toml"
]

[build-dependencies]
cc = "1.0"

[dependencies]
jni = "0.5.2"
android-ndk = "0.0.6"
android-ndk-sys = "0.2.0"

[dependencies.ndk_camera]
package = "ndk_camera"
path = "../ndk_camera"

[dependencies.ndk_camera_sys]
package = "ndk_camera_sys"
path = "../ndk_camera_sys"


[lib]
crate_type = ["staticlib", "dylib"]