[package]
name = "native_app"
version = "0.1.2"
authors = ["Aaron R Miller <aaron.miller@waweb.io>"]
license = "MIT"
keywords = ["android", "ndk", "camera"]
readme = "../README.md"
links = "android_native_app_glue"
build = "build.rs"

[dependencies]
jni = "0.5.2"
android-ndk = "0.0.6"
android-ndk-sys = "0.2.0"

[lib]
crate_type = ["staticlib", "dylib"]