[package]
name = "ndk_camera"
version = "0.1.0"
authors = ["Aaron R Miller <aaron.miller@waweb.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ndk_camera_sys]
package = "ndk_camera_sys"
path = "../ndk_camera_sys"
