[package]
name = "ndk_camera_sys"
version = "0.1.0"
authors = ["Aaron R Miller <aaron.miller@waweb.io>"]
edition = "2018"
description = "FFI Bindings for Android NDKCamera"
license = "MIT"
keywords = ["android", "ndk", "camera", "ffi"]
readme = "../README.md"

[build-dependencies]
bindgen = "0.51.1"